with register logic
